# workshop-python-poo

./: README.md  pyproject.toml
aula01-inicio/: a1_exemplo_class.py  a1_exemplo_funcao.py
aula02-classes/: csv-test.py  exemplo.csv  exemplo2.csv
aula02-classes/src/: usar_classe.py
aula02-classes/src/interface/classes/: csv_class.py
aula02-encapsulamento/: postgres.py
aula03-get-setter/: basico.py  decorator.py
aula03-heranca/: encaps.py  etl.py  sqlite.py
aula03-polimorfismo-heranca/: polimorfismo_overload.py  polimorfismo_override.py
aula03-trigger-arquivos/src/data/csv_files/: file1.csv  file2.csv
aula03-trigger-arquivos/src/lib/classes/: JsonSource.py
aula04-classes-abstracoes/fake-api/: depara.txt  start.py
aula04-classes-abstracoes/fake-api/Collector/tools/aws/: .ENV
aula04-classes-abstracoes/fake-api/data/: products.csv
